Closed
Bug 1178892
Opened 7 years ago
Closed 7 years ago
Split the profiler into Core & Gecko files and break apart monolithic headers
Categories
(Core :: Gecko Profiler, defect)
Core
Gecko Profiler
Tracking
()
RESOLVED
FIXED
mozilla42
Tracking | Status | |
---|---|---|
firefox42 | --- | fixed |
People
(Reporter: BenWa, Unassigned)
Details
Attachments
(1 file)
40 bytes,
text/x-review-board-request
|
Details |
Just a first round of profiler clean-up. I'll do more here and there as I find the time.
Reporter | ||
Updated•7 years ago
|
Summary: Profiler clean-up → Split the profiler into Core & Gecko files and break apart monolithic headers
Reporter | ||
Comment 1•7 years ago
|
||
Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r?mstange
Attachment #8627825 -
Flags: review?(mstange)
Reporter | ||
Comment 2•7 years ago
|
||
Pushing and poping this file seems like it requires a CLOBBER: 2:05.02 make[5]: *** No rule to make target `/Users/bgirard/mozilla/mozilla-central/tree/tools/profiler/gecko/local_debug_info_symbolizer.cc', needed by `local_debug_info_symbolizer.o'. Stop. I got this error when poping the patch. Got a similar one when I pushed it.
Comment 3•7 years ago
|
||
Note that bug 1173847 will remove a few of the files that you're moving.
Comment 4•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange https://reviewboard.mozilla.org/r/12289/#review10777 Ship It! ::: tools/profiler/moz.build:30 (Diff revision 1) > - 'nsProfiler.cpp', > - 'nsProfilerFactory.cpp', > - 'nsProfilerStartParams.cpp', > - 'platform.cpp', > - 'ProfileEntry.cpp', > - 'ProfileGatherer.cpp', > - 'ProfileJSONWriter.cpp', > - 'ProfilerBacktrace.cpp', > - 'ProfilerIOInterposeObserver.cpp', > - 'ProfilerMarkers.cpp', > - 'SaveProfileTask.cpp', > - 'SyncProfile.cpp', > - 'TableTicker.cpp', > - 'ThreadResponsiveness.cpp', > + 'core/GeckoSampler.cpp', > + 'core/platform.cpp', > + 'core/ProfileBuffer.cpp', > + 'core/ProfileEntry.cpp', > + 'core/ProfileJSONWriter.cpp', > + 'core/ProfilerBacktrace.cpp', > + 'core/ProfilerMarkers.cpp', > + 'core/SyncProfile.cpp', > + 'core/ThreadInfo.cpp', > + 'core/ThreadProfile.cpp', > + 'gecko/nsProfiler.cpp', > + 'gecko/nsProfilerFactory.cpp', > + 'gecko/nsProfilerStartParams.cpp', > + 'gecko/ProfileGatherer.cpp', > + 'gecko/ProfilerIOInterposeObserver.cpp', > + 'gecko/SaveProfileTask.cpp', > + 'gecko/ThreadResponsiveness.cpp', I don't know how common it is to refer to files in subdirectories from the moz.build vs adding new moz.build files to those subdirectories. Better get a build peer to review this. The rest looks good!
Attachment #8627825 -
Flags: review?(mstange) → review+
Reporter | ||
Comment 5•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange Can you review the moz.build changes? I modeled this after the gfx/layers build. We're using sub folders here to indicate that the files belong to different logical pieces of the profiler but we don't really want intermediate libraries or different build settings for them.
Attachment #8627825 -
Flags: review?(gps)
Comment 6•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange https://reviewboard.mozilla.org/r/12289/#review10807 The moz.build foo looks good.
Attachment #8627825 -
Flags: review?(gps) → review+
Reporter | ||
Comment 7•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange
Attachment #8627825 -
Attachment description: MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r?mstange → MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange
Attachment #8627825 -
Flags: review?(mstange)
Attachment #8627825 -
Flags: review+
Updated•7 years ago
|
Attachment #8627825 -
Flags: review?(mstange) → review+
Comment 8•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange https://reviewboard.mozilla.org/r/12289/#review10975 Ship It!
Reporter | ||
Updated•7 years ago
|
Attachment #8627825 -
Flags: review+
Reporter | ||
Comment 9•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange
Reporter | ||
Comment 10•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange
Reporter | ||
Comment 11•7 years ago
|
||
Comment on attachment 8627825 [details] MozReview Request: Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange Bug 1178892 - Split the profiler into Core & Gecko files and break apart monolithic headers. r=mstange
Reporter | ||
Comment 12•7 years ago
|
||
The above was to resolve the conflict with bug bug 1173847.
Reporter | ||
Comment 13•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/94714c206f18
Comment 14•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/94714c206f18
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in
before you can comment on or make changes to this bug.
Description
•