tools/profiler/core/GeckoSampler.cpp
@@ -21,7 +21,7 @@
 #include "platform.h"
 #include "shared-libraries.h"
 #include "mozilla/StackWalk.h"
-#include "TableTicker.h"
+#include "GeckoSampler.h"
 
 // JSON
 #include "ProfileJSONWriter.h"
@@ -40,6 +40,8 @@
 #include "mozilla/Services.h"
 #include "PlatformMacros.h"
 #include "nsTArray.h"
+
+#include "mozilla/ProfileGatherer.h"
 #endif
 
 #if defined(SPS_OS_android) && !defined(MOZ_WIDGET_GONK)
@@ -79,8 +81,8 @@ pid_t gettid();
 #ifndef SPS_STANDALONE
 #if defined(SPS_PLAT_amd64_linux) || defined(SPS_PLAT_x86_linux)
 # define USE_LUL_STACKWALK
-# include "LulMain.h"
-# include "platform-linux-lul.h"
+# include "lul/LulMain.h"
+# include "lul/platform-linux-lul.h"
 #endif
 #endif
 
@@ -176,7 +178,7 @@ hasFeature(const char** aFeatures, uint32_t aFeatureCount, const char* aFeature)
   return false;
 }
 
-TableTicker::TableTicker(double aInterval, int aEntrySize,
+GeckoSampler::GeckoSampler(double aInterval, int aEntrySize,
                          const char** aFeatures, uint32_t aFeatureCount,
                          const char** aThreadNameFilters, uint32_t aFilterCount)
   : Sampler(aInterval, true, aEntrySize)
@@ -241,7 +243,7 @@ TableTicker::TableTicker(double aInterval, int aEntrySize,
 #endif
 }
 
-TableTicker::~TableTicker()
+GeckoSampler::~GeckoSampler()
 {
   if (IsActive())
     Stop();
@@ -273,7 +275,7 @@ TableTicker::~TableTicker()
 #endif
 }
 
-void TableTicker::HandleSaveRequest()
+void GeckoSampler::HandleSaveRequest()
 {
   if (!mSaveRequested)
     return;
@@ -287,12 +289,12 @@ void TableTicker::HandleSaveRequest()
 #endif
 }
 
-void TableTicker::DeleteExpiredMarkers()
+void GeckoSampler::DeleteExpiredMarkers()
 {
   mBuffer->deleteExpiredStoredMarkers();
 }
 
-void TableTicker::StreamTaskTracer(SpliceableJSONWriter& aWriter)
+void GeckoSampler::StreamTaskTracer(SpliceableJSONWriter& aWriter)
 {
 #ifdef MOZ_TASK_TRACER
   aWriter.StartArrayProperty("data");
@@ -324,7 +326,7 @@ void TableTicker::StreamTaskTracer(SpliceableJSONWriter& aWriter)
 }
 
 
-void TableTicker::StreamMetaJSCustomObject(SpliceableJSONWriter& aWriter)
+void GeckoSampler::StreamMetaJSCustomObject(SpliceableJSONWriter& aWriter)
 {
   aWriter.IntProperty("version", 3);
   aWriter.DoubleProperty("interval", interval());
@@ -378,14 +380,14 @@ void TableTicker::StreamMetaJSCustomObject(SpliceableJSONWriter& aWriter)
 #endif
 }
 
-void TableTicker::ToStreamAsJSON(std::ostream& stream, double aSinceTime)
+void GeckoSampler::ToStreamAsJSON(std::ostream& stream, double aSinceTime)
 {
   SpliceableJSONWriter b(mozilla::MakeUnique<OStreamJSONWriteFunc>(stream));
   StreamJSON(b, aSinceTime);
 }
 
 #ifndef SPS_STANDALONE
-JSObject* TableTicker::ToJSObject(JSContext *aCx, double aSinceTime)
+JSObject* GeckoSampler::ToJSObject(JSContext *aCx, double aSinceTime)
 {
   JS::RootedValue val(aCx);
   {
@@ -398,25 +400,25 @@ JSObject* TableTicker::ToJSObject(JSContext *aCx, double aSinceTime)
 }
 #endif
 
-UniquePtr<char[]> TableTicker::ToJSON(double aSinceTime)
+UniquePtr<char[]> GeckoSampler::ToJSON(double aSinceTime)
 {
   SpliceableChunkedJSONWriter b;
   StreamJSON(b, aSinceTime);
   return b.WriteFunc()->CopyData();
 }
 
-void TableTicker::ToJSObjectAsync(double aSinceTime,
-                                  Promise* aPromise)
+void GeckoSampler::ToJSObjectAsync(double aSinceTime,
+                                  mozilla::dom::Promise* aPromise)
 {
   if (NS_WARN_IF(mGatherer)) {
     return;
   }
 
-  mGatherer = new ProfileGatherer(this, aSinceTime, aPromise);
+  mGatherer = new mozilla::ProfileGatherer(this, aSinceTime, aPromise);
   mGatherer->Start();
 }
 
-void TableTicker::ProfileGathered()
+void GeckoSampler::ProfileGathered()
 {
   mGatherer = nullptr;
 }
@@ -491,7 +493,7 @@ void BuildJavaThreadJSObject(SpliceableJSONWriter& aWriter)
 }
 #endif
 
-void TableTicker::StreamJSON(SpliceableJSONWriter& aWriter, double aSinceTime)
+void GeckoSampler::StreamJSON(SpliceableJSONWriter& aWriter, double aSinceTime)
 {
   aWriter.Start(SpliceableJSONWriter::SingleLineStyle);
   {
@@ -561,7 +563,7 @@ void TableTicker::StreamJSON(SpliceableJSONWriter& aWriter, double aSinceTime)
   aWriter.End();
 }
 
-void TableTicker::FlushOnJSShutdown(JSRuntime* aRuntime)
+void GeckoSampler::FlushOnJSShutdown(JSRuntime* aRuntime)
 {
 #ifndef SPS_STANDALONE
   SetPaused(true);
@@ -594,7 +596,7 @@ void PseudoStack::flushSamplerOnJSShutdown()
 {
 #ifndef SPS_STANDALONE
   MOZ_ASSERT(mRuntime);
-  TableTicker* t = tlsTicker.get();
+  GeckoSampler* t = tlsTicker.get();
   if (t) {
     t->FlushOnJSShutdown(mRuntime);
   }
@@ -921,7 +923,7 @@ void StackWalkCallback(uint32_t aFrameNumber, void* aPC, void* aSP,
   nativeStack->count++;
 }
 
-void TableTicker::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample)
+void GeckoSampler::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample)
 {
 #ifndef XP_MACOSX
   uintptr_t thread = GetThreadHandle(aSample->threadProfile->GetPlatformData());
@@ -974,7 +976,7 @@ void TableTicker::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample
 
 
 #ifdef USE_EHABI_STACKWALK
-void TableTicker::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample)
+void GeckoSampler::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample)
 {
   void *pc_array[1000];
   void *sp_array[1000];
@@ -1042,7 +1044,7 @@ void TableTicker::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample
 
 
 #ifdef USE_LUL_STACKWALK
-void TableTicker::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample)
+void GeckoSampler::doNativeBacktrace(ThreadProfile &aProfile, TickSample* aSample)
 {
   const mcontext_t* mc
     = &reinterpret_cast<ucontext_t *>(aSample->context)->uc_mcontext;
@@ -1162,13 +1164,13 @@ void doSampleStackTrace(ThreadProfile &aProfile, TickSample *aSample, bool aAddL
 #endif
 }
 
-void TableTicker::Tick(TickSample* sample)
+void GeckoSampler::Tick(TickSample* sample)
 {
   // Don't allow for ticks to happen within other ticks.
   InplaceTick(sample);
 }
 
-void TableTicker::InplaceTick(TickSample* sample)
+void GeckoSampler::InplaceTick(TickSample* sample)
 {
   ThreadProfile& currThreadProfile = *sample->threadProfile;
 
@@ -1251,7 +1253,7 @@ SyncProfile* NewSyncProfile()
 
 } // anonymous namespace
 
-SyncProfile* TableTicker::GetBacktrace()
+SyncProfile* GeckoSampler::GetBacktrace()
 {
   SyncProfile* profile = NewSyncProfile();
 
@@ -1278,7 +1280,7 @@ SyncProfile* TableTicker::GetBacktrace()
 }
 
 void
-TableTicker::GetBufferInfo(uint32_t *aCurrentPosition, uint32_t *aTotalSize, uint32_t *aGeneration)
+GeckoSampler::GetBufferInfo(uint32_t *aCurrentPosition, uint32_t *aTotalSize, uint32_t *aGeneration)
 {
   *aCurrentPosition = mBuffer->mWritePos;
   *aTotalSize = mBuffer->mEntrySize;
