tools/profiler/core/SyncProfile.h
@@ -8,6 +8,7 @@
 #define __SYNCPROFILE_H
 
 #include "ProfileEntry.h"
+#include "ThreadProfile.h"
 
 class SyncProfile : public ThreadProfile
 {
